# localuf

./: .gitignore  LICENSE  README.md  environment.yml  pyproject.toml  setup.cfg  uml_class_diagrams.md
.github/workflows/: docs.yml  publish-pypi.yml
demo_notebooks/: decoder_confidence_score.ipynb  intro.ipynb  snowflake.ipynb  snowflake_customization.ipynb
docs/: Makefile  api.rst  conf.py  index.rst  make.bat
localuf/: __init__.py  _base_classes.py  _determinants.py  _inner_init_helper.py  _pairs.py  _schemes.py  codes.py  constants.py  data_processors.py  plot.py  type_aliases.py
localuf/decoders/: __init__.py  _base_uf.py  base_decoder.py  buf.py  mwpm.py  node_buf.py  node_uf.py  policies.py  uf.py
localuf/decoders/luf/: __init__.py  alternatives.py  constants.py  main.py
localuf/decoders/snowflake/: __init__.py  constants.py  main.py
localuf/error_models/: __init__.py  main.py
localuf/noise/: __init__.py  _multiset_handler.py  forcers.py  main.py
localuf/plot/: __init__.py  accuracy.py  runtime.py
localuf/sim/: __init__.py  _height_calculator.py  accuracy.py  latency.py  logical_error.py  runtime.py
localuf/sim/accuracy/: __init__.py  monte_carlo.py
scripts/: convert_docstrings_to_rest.py  fix_returns_bullet_indentation.py  format_rest_docstrings.py
tests/: conftest.py
tests/_base_classes/Code/: test_Code_integration.py  test_Code_unit.py
tests/_base_classes/Scheme/: test_Scheme_unit.py
tests/_determinants/: test_Determinant.py  test_SpaceTimeDeterminant.py
tests/_pairs/: conftest.py  test_LogicalCounter.py  test_Pairs_integration.py  test_Pairs_unit.py
tests/_schemes/: test_Batch.py  test_Global.py
tests/_schemes/Forward/: conftest.py  test_Forward_integration.py  test_Forward_unit.py
tests/_schemes/Frugal/: test_Frugal_integration.py  test_Frugal_unit.py
tests/codes/: conftest.py  test_Batch.py  test_Repetition.py  test_Surface.py
tests/codes/Code/: test_Code_integration.py  test_Code_unit.py
tests/constants/: test_Growth.py
tests/decoders/: conftest.py  test_BaseUF.py
tests/decoders/luf/: conftest.py  (+1 more)
tests/error_models/: test_Uniform.py
tests/noise/: conftest.py
(+87 files in other folders)
